@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jacp.project</groupId>
 		<artifactId>JACP</artifactId>
-		<version>1.1</version>
+		<version>1.2</version>
 		<relativePath>../JACP</relativePath>
 	</parent>
 	<artifactId>JACP.API</artifactId>
@@ -31,8 +31,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
